--- a/src/pages/landing/sections/services/style.css
+++ b/src/pages/landing/sections/services/style.css
@@ -27,8 +27,8 @@ version 1.1
 ====================================== */
 
 .section-des {
-  max-width: 440px;
-  font-size: 22px;
+  /* max-width: 440px; */
+  font-size: 21px;
   line-height: 1.65;
 }
 
@@ -91,7 +91,7 @@ version 1.1
 
 .serv-block-wrap .serv-block-item h4 {
   font-weight: 500;
-  font-size: 22px;
+  font-size: 21px;
   line-height: 33px;
   letter-spacing: 0.27em;
   margin-top: 30px;
